--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.5.0",
     "next": "15.2.3",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.3",
